test/Fail/Issue1413.err
Issue1413.agda:15.3-11: error: [WrongHidingInProjection]
Wrong hiding used for projection  Foo.foo
when checking the clause left hand side
foo Foo⊤
